# kidofood

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: backend-ci.yml  frontend-ci.yml  graphql.yml
backend/: .env-example  .flake8  README.md  app.py  package.json  pyenv.js  pyproject.toml  schema.graphql
backend/graphql/: __init__.py  client.py  context.py  mutations.py  resolvers.py
backend/graphql/models/: __init__.py  common.py  items.py  merchant.py  pagination.py
backend/internals/: __init__.py  claim.py  depends.py  discover.py  enums.py  redbridge.py  responses.py  session.py  storage.py  tooling.py  utils.py  version.py
backend/internals/db/: __init__.py  _doc.py  client.py  models.py
backend/internals/graphql/: __init__.py  client.py  context.py  enums.py  files.py  mutations.py  resolvers.py  router.py  scalars.py  subscriptions.py
backend/internals/graphql/models/: __init__.py  common.py  items.py  merchant.py  order.py  pagination.py  user.py
backend/internals/models/: __init__.py  common.py  items.py  merchant.py  order.py  search.py  user.py
backend/internals/pubsub/: __init__.py  _types.py  client.py
backend/internals/session/: __init__.py  backend.py  errors.py  handler.py  models.py  security.py
backend/pipelines/: compare-schema.py  multi-lint.py
backend/routes/: __init__.py  auth.py  images.py  items.py  merchant.py  order.py  search.py  server.py  user.py
frontend/: .env-example  README.md  declaration.d.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/components/: LoginLayout.tsx  NavHeader.tsx
frontend/lib/: api.ts  darkSide.ts  guards.ts  hooks.ts  type.ts  utils.ts
frontend/models/: common.ts  items.ts  merchant.ts  order.ts  search.ts  user.ts
frontend/pages/: _app.tsx  _document.tsx  claim.tsx  index.tsx  login.tsx  register.tsx
frontend/states/: index.ts  model.ts  user.ts
frontend/styles/: global.css
