[tool.poetry]
name = "kidofood-backend"
version = "0.1.0"
description = "Backend code for kidofood food deliver web application"
authors = ["noaione <noaione0809@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
odmantic = "^0.9.0"
fastapi-sessions = "^0.3.2"
redis = {extras = ["hiredis"], version = "^4.3.4"}
python-dotenv = "^0.21.0"
orjson = "^3.8.1"
websockets = "^10.4"
coloredlogs = "^15.0.1"
motor = "3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
